added github dir show up as github logo

--- a/starship/.config/starship.toml
+++ b/starship/.config/starship.toml
@@ -28,6 +28,8 @@ truncation_symbol = "…/"
 "Music" = " "
 "Pictures" = " "
 ".config" = ""
+"github" = ""
+
 [git_branch]
 symbol = ""
 style = "bg:#394260"
