--- a/waybar/.config/waybar/config
+++ b/waybar/.config/waybar/config
@@ -16,6 +16,7 @@
         "sway/window"
     ],
     "modules-right": [
+        "tray",
         "mpd",
         "idle_inhibitor",
         "pulseaudio",
@@ -30,7 +31,6 @@
         "battery",
         "battery#bat2",
         "clock",
-        "tray",
         "custom/power"
     ],
     // Modules configuration
@@ -171,7 +171,7 @@
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}"
+        "format-alt": "{ifname}: {ipaddr}/{cidr}",
     },
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
